PROJECT(OpenViBE-documentation)

SET(PROJECT_VERSION_MAJOR x)
SET(PROJECT_VERSION_MINOR x)
SET(PROJECT_VERSION_PATCH x)
SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})

# ---------------------------------
# Target macros
# Defines target operating system
# Defines target architecture
# Defines target compilator
# ---------------------------------
IF(WIN32)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
	ADD_DEFINITIONS(-DTARGET_OS_Windows)
	ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_i386)
	ADD_DEFINITIONS(-DTARGET_COMPILATOR_VisualStudio)
ENDIF(WIN32)
IF(UNIX)
	# ADD_DEFINITIONS(-fvisibility=hidden) # This flag should be present... man gcc
	ADD_DEFINITIONS(-g)
	ADD_DEFINITIONS(-fnon-call-exceptions)
	ADD_DEFINITIONS(-DTARGET_OS_Linux)
	ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_i386)
	ADD_DEFINITIONS(-DTARGET_COMPILATOR_GCC)
ENDIF(UNIX)

add_subdirectory(src)

# -----------------------------
# Install files
# -----------------------------
#INSTALL(TARGETS ${PROJECT_NAME}-dynamic
#	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
#	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
#	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})

INSTALL(DIRECTORY bin/   DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}     PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY doc/   DESTINATION ${CMAKE_INSTALL_FULL_DOCDIR}     PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY etc/   DESTINATION ${CMAKE_INSTALL_FULL_SYSCONFDIR} PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY lib/   DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}     PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}    PATTERN ".svn" EXCLUDE)

#INSTALL(DIRECTORY src/   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
