FILE(GLOB_RECURSE source_files *.cpp *.h)

ADD_LIBRARY(${PROJECT_NAME}-dynamic SHARED ${source_files})

SET_TARGET_PROPERTIES(${PROJECT_NAME}-dynamic PROPERTIES
	VERSION ${PROJECT_VERSION}
	SOVERSION ${PROJECT_VERSION_MAJOR}
	COMPILE_FLAGS "-DOVA_Exports -DOVA_Shared")

INCLUDE("FindOpenViBEModuleSystem")
INCLUDE("FindThirdPartyOpenMASK4")
INCLUDE("FindThirdPartyOBT")
INCLUDE("FindThirdPartyOgre3D")
INCLUDE("FindThirdPartyVRPN")
