FILE(GLOB_RECURSE source_files *.cpp)

ADD_LIBRARY(${PROJECT_NAME}-static ${source_files})

ADD_DEFINITIONS(-DOVP_Exports)
ADD_DEFINITIONS(-DOVP_Shared)
ADD_LIBRARY(${PROJECT_NAME}-dynamic SHARED ${source_files})

SET_TARGET_PROPERTIES(${PROJECT_NAME}-dynamic PROPERTIES
	VERSION ${PROJECT_VERSION}
	SOVERSION ${PROJECT_VERSION_MAJOR})

# ---------------------------------
# Finds OpenViBE
# Adds library to target
# Adds include path
# ---------------------------------
FIND_PATH(PATH_OPENVIBE include/openvibe/ov_all.h PATHS $ENV{OpenViBE})
IF(PATH_OPENVIBE)
	MESSAGE(STATUS "  Found OpenViBE...")
	INCLUDE_DIRECTORIES(${PATH_OPENVIBE}/include)
	FIND_LIBRARY(LIB_OPENVIBE OpenViBE-${OPENVIBE_LINKING} PATH ${PATH_OPENVIBE}/lib)
	IF(LIB_OPENVIBE)
		MESSAGE(STATUS "    [  OK  ] lib ${LIB_OPENVIBE}")
		TARGET_LINK_LIBRARIES(${PROJECT_NAME}-dynamic ${LIB_OPENVIBE})
	ELSE(LIB_OPENVIBE)
		MESSAGE(STATUS "    [FAILED] lib OpenViBE-${OPENVIBE_LINKING}")
	ENDIF(LIB_OPENVIBE)
ELSE(PATH_OPENVIBE)
	MESSAGE(STATUS "  FAILED to find OpenViBE...")
ENDIF(PATH_OPENVIBE)
